more messing with pastrBasic